добавление новых тем

--- a/pred/pred.org
+++ b/pred/pred.org
@@ -158,10 +158,13 @@
 2. Сравнение модулей чисел организация разветвлённой структуры
    алгоритма, что приводит к перерасходу времени выполнения операции
 
+
+*** Прямой
+
 Прямой код (принятый в алгебре) используется для представления мантиссы
 в числах с плавающей точкой.
 
-*** Достоинства
+**** Достоинства
 :PROPERTIES:
 :CUSTOM_ID: достоинства
 :END:
@@ -170,7 +173,7 @@
 3. При заданной разрядной сетке количество положительных чисел равно
    отрицательным
 
-*** Недостатки
+**** Недостатки
 :PROPERTIES:
 :CUSTOM_ID: недостатки
 :END:
@@ -205,3 +208,4 @@ A - B = A + B_д
 
 Чтобы найти дополнение для числа в двоичной системе счисления,
 необходимо инверсию всех разрядов и прибавить единицу к младшему разряду.
+
